--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
 spring.application.name=booksLibrary
-spring.datasource.url=jdbc:mysql://localhost:3306/library_db
+
+spring.datasource.url=jdbc:mysql://localhost:3307/library_db
 spring.datasource.username=library_user
 spring.datasource.password=library_password
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# ????????????
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+
 
